<resources>
    <string name="app_name">VR Video Player</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>
    <string name="switch_viewer">Switch Cardboard viewer</string>
    <string name="output_mode_mono_left_eye">Monoscopic (L)</string>
    <string name="output_mode_mono_right_eye">Monoscopic (R)</string>
    <string name="output_mode_cardboard">Cardboard</string>
    <string name="input_layout_mono">Monoscopic</string>
    <string name="input_layout_stereo_horiz">Side-by-side stereo</string>
    <string name="input_layout_stereo_vert">Vertical stereo</string>
    <string name="input_mode_plain_fov">Flat FOV</string>
    <string name="input_mode_equirect_180">180° equirectangular</string>
    <string name="input_mode_equirect_360">360° equirectangular</string>
    <string name="input_mode_panorama_180">180° panorama</string>
    <string name="input_mode_panorama_360">360° panorama</string>
    <string name="input_layout_anaglyph_red_cyan">Anaglyph, red–cyan</string>
</resources>